--- a/report.tex
+++ b/report.tex
@@ -34,31 +34,18 @@
 \section{Introduction}
     \PARstart{T}{his} section introduces the topic and leads the reader on to the main part.
 
+Reverse Transcriptase (RT)qPCR is a technique used to describe the level of genetic expression is occuring in vitro
+by measuring the amount of mRNA within a sample. In this technique, mRNA is reverse transcribed in to complementary DNA by
+an enzyme labeled reverse transcriptase.
+
+In this experiment, $\beta$-actin and RPL13A will be used for direct controls against the immunological transcripts.
+INF$\beta$ will not be used as it will only appear after cycle 40 in the experiment producing undesirable results.
+The No Template Control will consist of DEPC water.
 
 
-    Real Time PCR
-      Generate large quantity of DNA from cDNA templates. Can view amount of DNA in each cycle.
-      Can be seen if immunological response was indicated.
+http://www.ncbi.nlm.nih.gov/pmc/articles/PMC2143693/pdf/9144766.pdf
+http://www.molbiolcell.org/content/22/21/4047.full.pdf+html?with-ds=yes
 
-
-      In this experiment, $\beta$-actin and RPL13A will be used for direct controls against the immunological transcripts.
-      INF$\beta$ will not be used as it will only appear after cycle 40 in the experiment producing undesirable results.
-      The No Template Control will consist of DEPC water.
-
-    Outline
-
-      polyplex polycationic
-      treatments
-      samples
-      form an immune response
-    The mRNA sampl
-
-Test the effects on
-
-Each student was given a sample as follows
-
- IL6 and IFN$\alpha$ are used as the immunilogical transcripts
-DEPC water is the no template control
 
 Poly24 Av
 Poly24 Ts
@@ -87,18 +74,11 @@ It is virtually impossible to completely eliminate all genomic DNA from RNA prep
       Each well will contain 2X iTaq universal SYBR Green supermix,
       one of the four primers (IL6, INF$\alpha$, $\beta$-actin or RPL13A),
       and the respective cDNA.
-
-
-
+      The cDNA needs to be diluted to 100ng/$\mu$L before it is added to the wells.
       The concentrations of cDNA for both sets of Poly24 and no washed cells were all around 100ng/ $\mu$ L.
-      Therefore only one set of calculations are needed for determining the amount of cDNA used in each well (1.32$\mu$L).
-      The amount of cDNA used is 1.32$\mu$L. The concentrations of just cells, however, were reported ot be 11.2ng/ $\mu$ L and thus,
-      required a different set of calculations. For both sets of Poly24 and no washed cells, 1.32 $\mu$L of diluted
-      cDNA was used for the INF$\alpha$, IL6 and the respective -RT wells. Since the concentration for just cells
-      was far lower than expected, 11.79 $\mu$L of diluted cDNA was used instead.For $\beta$-actin, RPL13A and the
-      respective -RT for both sets of Poly24 and no washed cells, 11.79 $\mu$L of cDNA is used. For just washed cells,
-      2.9 $\mu$L of cDNA is used.
-
+      Therefore only one set of calculations were needed for determining the proper dilution of cDNA into water
+      for either INF$\alpha$ and IL6 or $\beta$-actin andRPL13A and the respective -RT wells. For just cells,
+      a different set of calculations were needed since the original cDNA concentrations were around 11 ng/ $\mu$ L.
       The QtPCR was ran for 40 cycles.
 
     \subsection{Gel Electrophoresis}
