--- a/report.tex
+++ b/report.tex
@@ -25,7 +25,6 @@
 \begin{abstract}
   Abstract outline
 
-
   This experiment aims to study the effect of genetic expression on polyplex treated cells against $\beta$-actin and INF$\alpha$.
 
 \end{abstract}
@@ -71,7 +70,7 @@ It is virtually impossible to completely eliminate all genomic DNA from RNA prep
       When the -RT solution undergoes QtPCR, any contaminating genomic DNA will be amplified.
 
     \subsection{Qt PCR}
-      Each well will contain 2X iTaq universal SYBR Green supermix,
+      Each well will contain 2X iTaq universal SYBR Green Supermix,
       one of the four primers (IL6, INF$\alpha$, $\beta$-actin or RPL13A),
       and the respective cDNA.
       The cDNA needs to be diluted to 100ng/$\mu$L before it is added to the wells.
@@ -79,12 +78,15 @@ It is virtually impossible to completely eliminate all genomic DNA from RNA prep
       Therefore only one set of calculations were needed for determining the proper dilution of cDNA into water
       for either INF$\alpha$ and IL6 or $\beta$-actin andRPL13A and the respective -RT wells. For just cells,
       a different set of calculations were needed since the original cDNA concentrations were around 11 ng/ $\mu$ L.
+      All wells contained the Green Supermix. The columns were sorted by <insert> in the following manner:
+      1-3 contained IL6, 4-6 contained INF$\alpha$, 7-9 contained $\beta$-acting and 10-12 contained RPL13A.
       The QtPCR was ran for 40 cycles.
 
     \subsection{Gel Electrophoresis}
       In order to further understand the results gained from the QtPCR, an agarose gel was ran.
       The wells were constructed in the following manner:
-      (1) ladder,(2) E1,(3) E3,(4) G1,(5) E2,(6) B1,(7) C1,(8) A5,(9) C4,(10) A8,(11) D10,(12) E11,(13) E12,(14) A8,(15) ladder
+      (1) Ladder, (2) E1, (3) E3, (4) G1, (5) E2, (6) B1, (7) C1,
+      (8) A5, (9) C4, (10) A8, (11) D10, (12) E11, (13) E12, (14) A8, (15) Ladder
 
     \subsection{Analysis}
       The results from the QtPCR produced Ct values from each well.
