--- a/report.tex
+++ b/report.tex
@@ -41,6 +41,10 @@ In this experiment, $\beta$-actin and RPL13A will be used for direct controls ag
 INF$\beta$ will not be used as it will only appear after cycle 40 in the experiment producing undesirable results.
 The No Template Control will consist of DEPC water.
 
+Interleukin-6 (IL-6) is a multifunctional cytokine that defends the host in response
+to immune and hematopoietic activities.
+
+
 
 http://www.ncbi.nlm.nih.gov/pmc/articles/PMC2143693/pdf/9144766.pdf
 http://www.molbiolcell.org/content/22/21/4047.full.pdf+html?with-ds=yes
@@ -219,28 +223,28 @@ treatment for these cells of polycationic DNA for 24 hours could result in highe
 
   \begin{figure}[t]
     \centering
-    \includegraphics[width=8cm]{graph}
+    \includegraphics[width=8cm]{il6}
     \caption{Fold Inductions for}
     \label{fig:mesh1}
   \end{figure}
 
   \begin{figure}[t]
     \centering
-    \includegraphics[width=8cm]{graph}
+    \includegraphics[width=8cm]{bactin}
     \caption{Fold Inductions for}
     \label{fig:mesh1}
   \end{figure}
 
   \begin{figure}[t]
     \centering
-    \includegraphics[width=8cm]{graph}
+    \includegraphics[width=8cm]{infa}
     \caption{Fold Inductions for}
     \label{fig:mesh1}
   \end{figure}
 
   \begin{figure}[t]
     \centering
-    \includegraphics[width=8cm]{graph}
+    \includegraphics[width=8cm]{rpl13a}
     \caption{Fold Inductions for}
     \label{fig:mesh1}
   \end{figure}
