--- a/report.tex
+++ b/report.tex
@@ -8,6 +8,7 @@
 %\usepackage{stfloats}
 \usepackage{amsmath}
 %\usepackage{array}
+\usepackage{gensymb}
 
 % Package Settings
 \graphicspath{ {../images/} }
@@ -44,16 +45,10 @@ The No Template Control will consist of DEPC water.
 Interleukin-6 (IL-6) is a multifunctional cytokine that defends the host in response
 to immune and hematopoietic activities.
 
-
+%Beta-actin (human gene and protein symbol ACTB/ACTB) is one of six different actin isoforms which have been identified in humans. This is one of the two nonmuscle cytoskeletal actins. Actins are highly conserved proteins that are involved in cell motility, structure and integrity.
 
 http://www.ncbi.nlm.nih.gov/pmc/articles/PMC2143693/pdf/9144766.pdf
 http://www.molbiolcell.org/content/22/21/4047.full.pdf+html?with-ds=yes
-
-
-Poly24 Av
-Poly24 Ts
-Just Cells
-No Wash
 
 It is virtually impossible to completely eliminate all genomic DNA from RNA preparations. Therefore, if the assay is not cDNA-specific, it is important to include a minus-reverse transcriptase ("-RT") control in real-time RT-PCR experiments. Typically, the "-RT" control is a mock reverse transcription containing all the RT-PCR reagents, except the reverse transcriptase. The presence of an amplification product in the "-RT" control is indicative of contaminating DNA in the sample.”
 
@@ -72,6 +67,10 @@ It is virtually impossible to completely eliminate all genomic DNA from RNA prep
       For both solutions, 5X Reaction mix and nuclease free water was added. In the +RT solution, Maxima Enzyme mix (reverse transcriptase) was added to the mixture.
       The -RT solution used DEPC H20 instead of Maxima Enzyme mix so that the -RT solution can simulate the +RT solution without synthesizing RNA into cDNA.
       When the -RT solution undergoes QtPCR, any contaminating genomic DNA will be amplified.
+      The two solutions will be then mixed gently and centrifuged. An incubation period will take place at 25$^{\circ}$C for 10 min
+      followed by a second incubation session at 50$^{\circ}$C for 15 min.
+      The reaction will be terminated by heating the solutions at 85$^{\circ}$C for 5 min.
+      This process was conducted using Maxima First Strand cDNA Synthesis Kit with dsDNase (Thermo Scientific, Cat#: K1671)
 
     \subsection{Qt PCR}
       Each well will contain 2X iTaq universal SYBR Green Supermix,
@@ -82,7 +81,7 @@ It is virtually impossible to completely eliminate all genomic DNA from RNA prep
       Therefore only one set of calculations were needed for determining the proper dilution of cDNA into water
       for either INF$\alpha$ and IL6 or $\beta$-actin andRPL13A and the respective -RT wells. For just cells,
       a different set of calculations were needed since the original cDNA concentrations were around 11 ng/ $\mu$ L.
-      All wells contained the Green Supermix. The columns were sorted by <insert> in the following manner:
+      All wells contained the Green Supermix. The columns were sorted in the following manner:
       1-3 contained IL6, 4-6 contained INF$\alpha$, 7-9 contained $\beta$-acting and 10-12 contained RPL13A.
       The QtPCR was ran for 40 cycles.
 
