--- a/report.tex
+++ b/report.tex
@@ -45,12 +45,17 @@ The No Template Control will consist of DEPC water.
 Interleukin-6 (IL-6) is a multifunctional cytokine that defends the host in response
 to immune and hematopoietic activities.
 
+%Beta actin is an actin isoform that is highly involved in cell motility, structure and integrity.
+
 %Beta-actin (human gene and protein symbol ACTB/ACTB) is one of six different actin isoforms which have been identified in humans. This is one of the two nonmuscle cytoskeletal actins. Actins are highly conserved proteins that are involved in cell motility, structure and integrity.
 
-http://www.ncbi.nlm.nih.gov/pmc/articles/PMC2143693/pdf/9144766.pdf
-http://www.molbiolcell.org/content/22/21/4047.full.pdf+html?with-ds=yes
+%Qubit
 
-It is virtually impossible to completely eliminate all genomic DNA from RNA preparations. Therefore, if the assay is not cDNA-specific, it is important to include a minus-reverse transcriptase ("-RT") control in real-time RT-PCR experiments. Typically, the "-RT" control is a mock reverse transcription containing all the RT-PCR reagents, except the reverse transcriptase. The presence of an amplification product in the "-RT" control is indicative of contaminating DNA in the sample.”
+%http://www.ncbi.nlm.nih.gov/pmc/articles/PMC2143693/pdf/9144766.pdf
+%http://www.molbiolcell.org/content/22/21/4047.full.pdf+html?with-ds=yes
+
+For the QtPCR, since it is impossible to eliminate all genomic DNA from the cDNA synthesis, two solutions will be prepared. The first solution will be a +RT which will include reverse transcriptase and thus, will have cDNA.
+The second solution will be a -RT solution which will lack reverse transcriptase. When QtPCR is performed on the -RT solution, genomic DNA will be amplified and will be seen in the resulting data.
 
 \section{Methods}
     \subsection{RNA Purification}
@@ -137,13 +142,6 @@ The mRNA was purified and converted to cDNA. THe resulting concentration was rel
 treatment for these cells of polycationic DNA for 24 hours could result in higher transcription rates.
 
 \section{Figures}
-
-  \begin{itemize}
-    \item Columns 1-3 IL6
-    \item Columns 4-6 INF$\alpha$
-    \item Columns 7-9 $\beta$-acting
-    \item Columns 10-12 RPL13A
-  \end{itemize}
 
   \begin{figure}[t]
     \centering
