--- a/pdf/report.tex
+++ b/pdf/report.tex
@@ -34,14 +34,14 @@
 \section{Introduction}
     \PARstart{T}{his} section introduces the topic and leads the reader on to the main part.
 
-
-
 In this experiment, $\beta$-actin and RPL13A will be used for direct controls against the immunological transcripts.
 INF$\beta$ will not be used as it will only appear after cycle 40 in the experiment producing undesirable results.
 The No Template Control will consist of DEPC water.
 
-Interleukin-6 (IL-6) is a multifunctional cytokine that defends the host in response
-to immune and hematopoietic activities.
+Beta actin is a type of actin isoform which is highly involved in cell motility, structure and integrity.
+RPL13A is a gene that codes for the 60S ribosomal L13a protein.
+Interleukin-6 (IL-6) is a multifunctional cytokine that defends the host in response to immune and hematopoietic activities.
+Interferon-$\alpha$ is a part of a large subgroup of interferon protiens that help regulate the activity of the immune system.
 
 Reverse Transcriptase (RT)qPCR is a technique used to describe the level of genetic expression is occuring in vitro
 by measuring the amount of mRNA within a sample. In this technique, mRNA is reverse transcribed in to complementary DNA by
@@ -51,9 +51,6 @@ For the Real Time PCR experiment, since it is impossible to eliminate all genomi
 The second solution will be a -RT solution which will lack reverse transcriptase. When QtPCR is performed on the -RT solution, genomic DNA will be amplified and will be seen in the resulting data.
 
 
-%Beta actin is an actin isoform that is highly involved in cell motility, structure and integrity.
-
-%Beta-actin (human gene and protein symbol ACTB/ACTB) is one of six different actin isoforms which have been identified in humans. This is one of the two nonmuscle cytoskeletal actins. Actins are highly conserved proteins that are involved in cell motility, structure and integrity.
 
 %Qubit
 
@@ -135,9 +132,20 @@ The second solution will be a -RT solution which will lack reverse transcriptase
 %      \end{center}
 %    \end{table}
 
+
+
   \subsection{QtPCR}
 
   \subsection{Gel Electrophoresis}
+    %		Poly24[AV]-NoWash	Poly24[AV]-Cells	NoWash-Cells	Poly24[Tk]-NoWash	Poly24[Tk]-Cells
+    %IL6	Average	3.85E-05	3.10E-02	8.01E+02	8.20E-05	6.54E-02
+    %	St Deviation	8.40E-06	1.60E-02	3.90E+02	2.76E-05	3.41E-02
+    %INFA	Average	7.58E-03	3.54E-02	4.65E+00	4.64E-03	5.90E-02
+    %	St Deviation	6.90E-04	1.13E-02	1.26E+00	4.13E-03	3.09E-02
+    %B Actin	Average	5.09E-05	3.94E-02	7.01E+02	3.77E-05	2.57E-02
+    %	St Deviation	2.30E-05	2.61E-02	2.38E+02	1.39E-05	1.20E-02
+    %RPL13A	Average	1.05E-02	4.27E-02	4.08E+00	6.04E-03	2.55E-02
+    %	St Deviation	5.33E-03	2.28E-02	3.58E-01	3.86E-03	1.78E-02
 
 \section{Discussion}
 
