Added data regarding poly6

--- a/report.tex
+++ b/report.tex
@@ -129,6 +129,9 @@ The second solution will be a -RT solution which will lack reverse transcriptase
 %      \end{tabular}
 %      \end{center}
 %    \end{table}
+%Il6-B actin, INFa-Beta Actin, IL6-RPL13A, INFA-RPL13A
+%Mean 500.25 421.07 25.83 22.29
+%Standard deviation 614.52 479.64 22.69 9.09
 
   \subsection{QtPCR}
 
@@ -153,12 +156,13 @@ The second solution will be a -RT solution which will lack reverse transcriptase
         \hline
         Poly24[Tk]-Cells & 6.54E-02 & 5.90E-02 & 2.57E-02 & 2.55E-02\\
         \hline
+        Poly6 & 500.25 & 421.07 & 25.83 & 22.29 \\
+        \hline
       \end{tabular}
       \end{center}
     \end{table}
 
   \subsection{Gel Electrophoresis}
-    
 
 \section{Discussion}
 
