--- a/report.tex
+++ b/report.tex
@@ -48,16 +48,16 @@
   Interleukin-6 (IL-6) is a multifunctional cytokine that defends the host in response to immune and hematopoietic activities.
   Interferon-$\alpha$ is a part of a large subgroup of interferon protiens that help regulate the activity of the immune system.
 
+  In this experiment, there are two devices used. The first device, the Qubit, is an electronic device that quantifies a substance through fluorescence.
+  The second device is qPCR.
   Reverse Transcriptase (RT)qPCR is a technique used to describe the level of genetic expression is occuring in vitro
   by measuring the amount of mRNA within a sample. In this technique, mRNA is reverse transcribed in to complementary DNA by
   an enzyme labeled reverse transcriptase.
-
   For the Real Time PCR experiment, since it is impossible to eliminate all genomic DNA from the cDNA synthesis, two solutions will be prepared.
   The first solution will be a +RT which will include reverse transcriptase and thus, will have cDNA.
   The second solution will be a -RT solution which will lack reverse transcriptase.
   When QtPCR is performed on the -RT solution, genomic DNA will be amplified and will be seen in the resulting data.
 
-%Qubit
 
 
 
@@ -169,21 +169,29 @@
 
   \subsection{Gel Electrophoresis}
 
+    \begin{figure}[t]
+      \centering
+      \includegraphics[width=8cm]{gel}
+      \caption{Agarose Gel}
+      \label{fig:mesh1}
+    \end{figure}
+
 \section{Discussion}
 
-For a future experiment, it would be suggested that the polyplex cells are treated in 3 hour increments from 3 hours to 24 hours.
-
-\section{Conclusion}
 The mRNA was purified and converted to cDNA. THe resulting concentration was relatively high compared to peers. This eludes that the
 treatment for these cells of polycationic DNA for 24 hours could result in higher transcription rates.
 
-\section{Figures}
 
-  \begin{figure}[t]
-    \centering
-    \caption{Agarose Gel}
-    \label{fig:mesh1}
-  \end{figure}
+
+
+
+\section{Conclusion}
+
+To futher understand the nature polyplex treated cells in response to a specific duration,
+it would be suggested that the polyplex cells are treated in 3 hour increments from 3 hours to 24 hours.
+
+
+\section{Figures}
 
   \begin{table}[!hbt]
     % Center the table
@@ -249,35 +257,28 @@ treatment for these cells of polycationic DNA for 24 hours could result in highe
 
   \begin{figure}[t]
     \centering
-    \includegraphics[width=8cm]{gel}
-    \caption{Agarose Gel}
-    \label{fig:mesh1}
-  \end{figure}
-
-  \begin{figure}[t]
-    \centering
     \includegraphics[width=8cm]{il6}
-    \caption{Fold Inductions for Interleukin-6}
+    \caption{Fold Inductions for Interleukin-6. }
     \label{fig:mesh1}
   \end{figure}
 
   \begin{figure}[t]
     \centering
     \includegraphics[width=8cm]{bactin}
-    \caption{Fold Inductions for $\beta$-actin}
+    \caption{Fold Inductions for $\beta$-actin. }
     \label{fig:mesh1}
   \end{figure}
 
   \begin{figure}[t]
     \centering
     \includegraphics[width=8cm]{infa}
-    \caption{Fold Inductions for Interferon-$\alpha$}
+    \caption{Fold Inductions for Interferon-$\alpha$. }
     \label{fig:mesh1}
   \end{figure}
 
   \begin{figure}[t]
     \centering
-    \includegraphics[width=8cm]{rpl13a}
+    \includegraphics[width=8cm]{rpl13a. }
     \caption{Fold Inductions for}
     \label{fig:mesh1}
   \end{figure}
