--- a/report.tex
+++ b/report.tex
@@ -39,14 +39,8 @@
   are small protiens that are involved in various types of cell signaling. Classifications of these signalings
   include interferos, chemokines and interleukins.
 
-  In this experiment, $\beta$-actin and RPL13A will be used for direct controls against the immunological transcripts.
-  INF$\beta$ will not be used as it will only appear after cycle 40 in the experiment producing undesirable results.
-  The No Template Control will consist of DEPC water.
+%The role of cell division in gene expression is important to understand in order to guide the development of better nonviral gene delivery materials. Microinjection experiments have repeatedly confirmed that transgenes must reach the nucleus to generate a gene product,1–5 indicating that the nuclear membrane is a major barrier to gene expression. Some studies have shown that nuclear uptake of plasmid DNA (pDNA) is strongly dependent on cell division4,6–11 with seminal work having been done by Mario Capecchi more than 30 years ago.1 Other research has shown that cell division is not required for nuclear uptake of pDNA12–16 with most studies exploiting nuclear localization signals (NLS) for transport through nuclear pore complexes.17 Indeed, Zanta et al. have shown that a single NLS is able to translocate pDNA to the nucleus.18
 
-  Beta actin is a type of actin isoform which is highly involved in cell motility, structure and integrity.
-  RPL13A is a gene that codes for the 60S ribosomal L13a protein.
-  Interleukin-6 (IL-6) is a multifunctional cytokine that defends the host in response to immune and hematopoietic activities.
-  Interferon-$\alpha$ is a part of a large subgroup of interferon protiens that help regulate the activity of the immune system.
 
   In this experiment, there are two devices used. The first device, the Qubit, is an electronic device that quantifies a substance through fluorescence.
   The second device is qPCR.
@@ -57,6 +51,15 @@
   The first solution will be a +RT which will include reverse transcriptase and thus, will have cDNA.
   The second solution will be a -RT solution which will lack reverse transcriptase.
   When QtPCR is performed on the -RT solution, genomic DNA will be amplified and will be seen in the resulting data.
+
+  In this experiment, $\beta$-actin and RPL13A will be used for direct controls against the immunological transcripts.
+  INF$\beta$ will not be used as it will only appear after cycle 40 in the experiment producing undesirable results.
+  The No Template Control will consist of DEPC water.
+  The immunological transcripts that will be used in this experiment are Interleukin-6 (IL6) and Inferon-$\alpha$ (INF$\alpha$)
+  Beta actin is a type of actin isoform which is highly involved in cell motility, structure and integrity.
+  RPL13A is a gene that codes for the 60S ribosomal L13a protein.
+  Interleukin-6 (IL-6) is a multifunctional cytokine that defends the host in response to immune and hematopoietic activities.
+  Interferon-$\alpha$ is a part of a large subgroup of interferon protiens that help regulate the activity of the immune system.
 
 
 
@@ -109,6 +112,7 @@
 \section{Results}
 
   \subsection{Qubit}
+    Poly24
 
 %    \begin{table}[!hbt]
 %      % Center the table
